# Arcade-Game-Jam

./: readme.md
.github/: PULL_REQUEST_TEMPLATE.md
submissions/ARegularGame-SwaritChoudhari/: README.md
submissions/ARegularGame-SwaritChoudhari/source/: export_presets.cfg
submissions/Ah It Appears To Have Done Something - Marini/: READ ME.md  README.md
submissions/Ah It Appears To Have Done Something - Marini/solutions/: LEVEL 0.md  LEVEL 1.md  LEVEL 2.md  LEVEL 3.md
submissions/Among_The_Hackgeon--CodeSentinel/: README for subbmision.md
submissions/BreakOut-Sajeg/: README.md
submissions/Bulletslit-Defender/: README.md
submissions/BulletslitDefender-MathR/: README.md
submissions/Cardtrick-noxi/: README.md
submissions/GalacticLoophole-PonderSlime/: README.md
submissions/GlitchOut-Irtaza/: README.md
submissions/InfiniteLoop-mattsoh/: README.MD
submissions/Octodive-Nina/: README.md
submissions/RRR-Nobody/: README.md
submissions/RRR-Nobody/Source/: End.kv  End.py  Levels.py  PMenu.kv  Pausemenu.py  Player.py  StartSceen.py  main.py  pyproject.toml  requirements.txt  rrr.kv  titlescreen.kv
submissions/RRR-Nobody/Source/Graphics/Maps/: Guns.tsx  Level1.tmx  Level2.tmx  Level3.tmx  Level4.tmx  Level5.tmx  Level6.tmx  Level7.tmx  Main tiles.tsx
submissions/SIime Game - Lilia Dostie (KittyCat)/: README.md
submissions/SpikeField-Ethan F/: README.md
submissions/SpokenWordSorcery-beyond-reality-dev/: README.md
submissions/exampleGame-EvanGan/: README.md
submissions/loopholeDefender-RowanFoxx/: LICENSE  README.md
(+1504 files in other folders)
